Prevent question content scrollbar from always showing.

--- a/app/client/stylesheets/smartervote.import.less
+++ b/app/client/stylesheets/smartervote.import.less
@@ -170,12 +170,13 @@ body {
 /*
  * This is the container generated by the custom scrollbar
  *
- * 1. it uses relative positioning, so can't use top-bottom absolute positioning
+ * 1. clone uses relative positioning, so can't use top-bottom absolute positioning
+ *    100% would already display scrollbar!
  * 2. might be theme related, check when customising
  * 3. footer height!
  */
 .mCSB_container {
-  min-height: 100%; /* 1 */
+  min-height: 99.9%; /* 1 */
   margin-right: 30px !important; /* 2 */
   padding-bottom: 33rem; /* 3 */
 }
